--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -11,6 +11,7 @@
     "@typescript-eslint/parser": "^5.7.0",
     "eslint-config-next": "^12.0.3",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jest": "^25.3.0"
+    "eslint-plugin-jest": "^25.3.0",
+    "eslint-plugin-unused-imports": "^2.0.0"
   }
 }
