--- a/apps/home/package.json
+++ b/apps/home/package.json
@@ -12,8 +12,11 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mdx-js/react": "^1.6.22",
+    "graphql": "^16.2.0",
+    "graphql-request": "^3.7.0",
     "next": "12.0.3",
     "react": "17.0.2",
+    "react-datocms": "^1.6.8",
     "react-dom": "17.0.2",
     "theme-ui": "^0.13.0"
   },
