--- a/apps/home/package.json
+++ b/apps/home/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.2",
     "react-datocms": "^1.6.8",
     "react-dom": "17.0.2",
+    "react-player": "^2.9.0",
     "theme-ui": "^0.13.0"
   },
   "devDependencies": {
